<resources>
    <string name="app_name">Mundo LAP</string>

    <string name="login_email">Email</string>
    <string name="login_passoword">Contraseña</string>
    <string name="login_confirm_passoword">Confirm Password</string>
    <string name="login_sign_in">Ingresar</string>
    <string name="login_sign_ip">Sing Up</string>
    <string name="login_reset_password">Reset my password</string>
    <string name="login_sign_in_google">Ingresar con Google</string>
    <string name="login_forgot_password">Olvide mi Contraseña</string>
    <string name="login_create_account">Crear Nueva Cuenta</string>
    <string name="login_go_login">Go back to Login</string>
    <string name="title_activity_home">homeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="cuenta">Cuenta</string>
    <string name="carrera">Carrera</string>
    <string name="herramienta">Herramienta</string>
    <string name="modelo">Modelo</string>
    <string name="caracteristica">Caracteristicas</string>
    <string name="comunicar">Comunicar</string>
    <string name="compartir">Compartir</string>
    <string name="enviar">Enviar</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>


    <string name="abrir_navigation_drawner">abierto</string>
    <string name="cerrar_navigation_drawner">cerrado</string>

    <string name="nombre">Nombre</string>
    <string name="datos">Registro</string>
    <string name="registrar_usuario">Registrar Usuario</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
