<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:id="@+id/grupo0">
        <item
            android:id="@+id/nav_cuenta"
            android:icon="@drawable/ic_cuenta"
            android:title="@string/cuenta" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_herramienta"
            android:icon="@drawable/ic_herramienta"
            android:title="@string/herramienta" />
        <item
            android:id="@+id/nav_modelo"
            android:icon="@drawable/ic_modelo"
            android:title="@string/modelo" />
        <item
            android:id="@+id/nav_carrera"
            android:icon="@drawable/ic_carrera"
            android:title="@string/carrera" />
    </group>
    <group  android:id="@+id/grupo2">
            <item
                android:id="@+id/nav_compartir"
                android:icon="@drawable/ic_compartir"
                android:title="@string/compartir" />
            <item
                android:id="@+id/nav_enviar"
                android:icon="@drawable/ic_enviar"
                android:title="@string/enviar" />
            <item
                android:id="@+id/nav_sesion"
                android:icon="@drawable/ic_cerrar_sesion"
                android:title="@string/cerrar_sesion" />
    </group>
</menu>