<?xml version="1.0" encoding="utf-8"?>


    <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fillViewport="true"
    tools:context=".RegistroActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edit_text_height"
            android:layout_marginStart="32dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="32dp"
            android:text="@string/datos"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:paddingLeft="@dimen/space"
            android:paddingRight="@dimen/space"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/nuevoNombre"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edit_text_height"

            android:layout_marginStart="32dp"
            android:layout_marginTop="140dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edittext_rounded"
            android:hint="@string/nombre"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingLeft="@dimen/login_edit_text_space"
            android:paddingRight="@dimen/login_edit_text_space"
            android:textSize="@dimen/login_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/nuevoEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edit_text_height"

            android:layout_marginStart="32dp"
            android:layout_marginTop="230dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edittext_rounded"
            android:hint="@string/login_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/login_edit_text_space"
            android:paddingRight="@dimen/login_edit_text_space"
            android:textSize="@dimen/login_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/nuevoContraseña"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edit_text_height"

            android:layout_marginStart="32dp"
            android:layout_marginTop="320dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edittext_rounded"
            android:hint="@string/login_passoword"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/login_edit_text_space"
            android:paddingRight="@dimen/login_edit_text_space"
            android:textSize="@dimen/login_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/nuevoUsuario"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_button_height"

        android:layout_marginStart="32dp"
        android:layout_marginTop="600dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_ripple_bg"
        android:text="@string/registrar_usuario"
        android:textColor="@color/colorPrimaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
